--- a/src/components/dialog/AdventureDialog.module.scss
+++ b/src/components/dialog/AdventureDialog.module.scss
@@ -15,6 +15,18 @@
   animation: dialog-fade-in 0.2s ease-out;
 }
 
+// Contained variant for windowed mode (relative to game window)
+.overlayContained {
+  position: absolute;
+  inset: 0;
+  background: rgb(0 0 0 / 85%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  animation: dialog-fade-in 0.2s ease-out;
+}
+
 @keyframes dialog-fade-in {
   from {
     opacity: 0;
