feat: minimise windows

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -42,6 +42,9 @@ $color-action: #4a4558;
 $color-action-light: #6e6882;
 $color-action-dark: #2a2535;
 
+// Win95 Desktop font size
+$win-95-desktop-font-size: 12px;
+
 :root {
   /* ============================================
      SPACING SCALE (rem-based)
