--- a/src/components/desktop/Win95Desktop.module.scss
+++ b/src/components/desktop/Win95Desktop.module.scss
@@ -1,4 +1,6 @@
 // Windows 95 Desktop styling
+@use "../../styles/variables" as *;
+
 .overlay {
   position: fixed;
   inset: 0;
@@ -129,7 +131,7 @@
 .iconLabel {
   color: #fff;
   font-family: "MS Sans Serif", Arial, sans-serif;
-  font-size: 11px;
+  font-size: $win-95-desktop-font-size;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
   overflow-wrap: break-word;
@@ -209,7 +211,7 @@
   border: 2px solid;
   border-color: #fff #000 #000 #fff;
   font-family: "MS Sans Serif", Arial, sans-serif;
-  font-size: 11px;
+  font-size: $win-95-desktop-font-size;
   cursor: pointer;
   color: #000;
   max-width: 160px;
@@ -253,7 +255,7 @@
   border: 2px solid;
   border-color: #808080 #fff #fff #808080;
   font-family: "MS Sans Serif", Arial, sans-serif;
-  font-size: 11px;
+  font-size: $win-95-desktop-font-size;
   color: #000;
 
   @media (width <= 768px) {
